gccida/c3/get_node_dependence
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_node_dependence/src/dependence.c:1096:1: error: unknown type name 'def_use_0'; did you mean 'def_use'?
def_use_0 *du_ptr; // [rsp+10h] [rbp-10h] 
^~~~~~~~~
def_use
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_node_dependence/src/dependence.c:102:3: note: 'def_use' declared here
} def_use;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_node_dependence/src/dependence.c:1100:29: error: expected expression
for ( du_ptr = ( def_use_0 *)def_use_chain->data.l[0]; ; du_ptr = ( def_use_0 *)def_use_chain->data.l[v0] ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_node_dependence/src/dependence.c:1100:18: error: use of undeclared identifier 'def_use_0'
for ( du_ptr = ( def_use_0 *)def_use_chain->data.l[0]; ; du_ptr = ( def_use_0 *)def_use_chain->data.l[v0] ) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_node_dependence/src/dependence.c:1100:80: error: expected expression
for ( du_ptr = ( def_use_0 *)def_use_chain->data.l[0]; ; du_ptr = ( def_use_0 *)def_use_chain->data.l[v0] ) 
                                                                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_node_dependence/src/dependence.c:1100:69: error: use of undeclared identifier 'def_use_0'
for ( du_ptr = ( def_use_0 *)def_use_chain->data.l[0]; ; du_ptr = ( def_use_0 *)def_use_chain->data.l[v0] ) 
                                                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_node_dependence/src/dependence.c:1100:81: error: expected ')'
for ( du_ptr = ( def_use_0 *)def_use_chain->data.l[0]; ; du_ptr = ( def_use_0 *)def_use_chain->data.l[v0] ) 
                                                                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_node_dependence/src/dependence.c:1100:5: note: to match this '('
for ( du_ptr = ( def_use_0 *)def_use_chain->data.l[0]; ; du_ptr = ( def_use_0 *)def_use_chain->data.l[v0] ) 
    ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_node_dependence/src/obj/dependence.o] Error 1
